# toi-win-ci

.github/workflows/: win.yml
CS80/: CMakeLists.txt  CS80Native.h  cmajor_plugin.cpp  toi_faceplate.h
CZ/: CMakeLists.txt  CZNative.h  cmajor_plugin.cpp  toi_faceplate.h
D50/: CMakeLists.txt  D50Native.h  cmajor_plugin.cpp
DX/: CMakeLists.txt  DXNative.h  cmajor_plugin.cpp
FIZ/: CMakeLists.txt  FIZNative.h  cmajor_plugin.cpp  toi_faceplate.h
JUNO/: CMakeLists.txt  JunoNative.h  cmajor_plugin.cpp  toi_faceplate.h
JUP/: CMakeLists.txt  JUPNative.h  cmajor_plugin.cpp  toi_faceplate.h
JX/: CMakeLists.txt  JXNative.h  cmajor_plugin.cpp
M1/: CMakeLists.txt  M1Native.h  cmajor_plugin.cpp
MEM/: CMakeLists.txt  MEMNative.h  cmajor_plugin.cpp
MS20/: CMakeLists.txt  MS20Native.h  cmajor_plugin.cpp  toi_faceplate.h
MX12/: CMakeLists.txt  MX12Native.h  cmajor_plugin.cpp
Mini/: CMakeLists.txt  MiniNative.h  cmajor_plugin.cpp  toi_faceplate.h
NL/: CMakeLists.txt  NLNative.h  cmajor_plugin.cpp
OBX/: CMakeLists.txt  OBXNative.h  cmajor_plugin.cpp
ODY/: CMakeLists.txt  ODYNative.h  cmajor_plugin.cpp
OSC/: CMakeLists.txt  OSCNative.h  cmajor_plugin.cpp
P5/: CMakeLists.txt  P5Native.h  cmajor_plugin.cpp
PPG/: CMakeLists.txt  PPGNative.h  cmajor_plugin.cpp
SEM/: CMakeLists.txt  SEMNative.h  cmajor_plugin.cpp  toi_faceplate.h
VCS/: CMakeLists.txt  VCSNative.h  cmajor_plugin.cpp
VS/: CMakeLists.txt  VSNative.h  cmajor_plugin.cpp
_2600/: CMakeLists.txt  _2600Native.h  cmajor_plugin.cpp  toi_faceplate.h
